[tool.poetry]
name = "qsp"
version = "0.1.0"
description = ""
authors = ["Guilherme <gui.dias.alves20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.12.0"
typer = "^0.9.0"
textual = "^0.29.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
